--- a/www/404.html
+++ b/www/404.html
@@ -9,7 +9,7 @@
 <body>
 <div class="error-content">
     <dotlottie-wc src="https://lottie.host/a4b0ea9c-bc21-47e7-ba3a-6576f34cfba8/unpj5c15E4.lottie" speed="1" autoplay loop></dotlottie-wc>
-    <a href="./index.html">Torna alla pagina principale</a>
+    <a href="/index.html">Torna alla pagina principale</a>
 </div>
 </body>
 </html>
