--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,6 @@
     <title>welcome</title>
 </head>
 <body>
-<button><a href="game.html">game start </a> </button>
+<button><a href="/game.html">game start </a> </button>
 </body>
 </html>
