fix a some bugs

--- a/www/405.html
+++ b/www/405.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>404 page</title>
+    <title>405 page</title>
     <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
     <link rel="stylesheet" href="css/errore.css">
 </head>
 <body>
 <div class="error-content">
-    <dotlottie-wc src="https://lottie.host/a4b0ea9c-bc21-47e7-ba3a-6576f34cfba8/unpj5c15E4.lottie" speed="1" autoplay loop></dotlottie-wc>
-    <a href="/index.html">Torna alla pagina principale</a>
+    <img src="./images/warning.gif" alt="Rifiuto di accesso" width="100" height="100">
+    <br>
+    <a href="/index.html">Stai accedendo a una risorsa riservata con un metodo non consentito. Torna alla pagina principale.</a>
 </div>
 </body>
 </html>
